// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deal address component renders with address 1`] = `
<div
  class="makeStyles-container-1"
  title=""
>
  <div>
    <h6
      class="MuiTypography-root-16 MuiTypography-subtitle1-27"
    >
      1200 Main St
    </h6>
    <h6
      class="MuiTypography-root-16 makeStyles-addressSecondary-4 MuiTypography-subtitle2-28"
    >
       Dallas,  TX
    </h6>
  </div>
  <button
    class="MuiButtonBase-root-73 MuiButton-root-46 MuiButton-text-48 makeStyles-editButton-2 MuiButton-textSecondary-50 MuiButton-textSizeSmall-59 MuiButton-sizeSmall-65"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-47"
    >
      Edit
    </span>
  </button>
</div>
`;

exports[`Deal address component renders without address 1`] = `
<div
  class="makeStyles-container-74"
  title=""
>
  <div>
    <h6
      class="MuiTypography-root-89 MuiTypography-subtitle1-100"
    >
      Some title for a deal without address
    </h6>
  </div>
  <button
    class="MuiButtonBase-root-146 MuiButton-root-119 MuiButton-text-121 makeStyles-editButton-75 MuiButton-textSecondary-123 MuiButton-textSizeSmall-132 MuiButton-sizeSmall-138"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-120"
    >
      + Add Address
    </span>
  </button>
</div>
`;
